objects/FieloCH__ChallengeMission__c.object
<CustomObject>
    <fields>
        <fullName>FieloCH__Average__c</fullName>
        <formula>IF( !ISNULL(FieloCH__Summary__c) &amp;&amp; !ISNULL(FieloCH__Counter__c) &amp;&amp; FieloCH__Counter__c != 0 , FieloCH__Summary__c / FieloCH__Counter__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__Challenge2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Challenge</label>
        <referenceTo>FieloCH__Challenge__c</referenceTo>
        <relationshipLabel>Missions</relationshipLabel>
        <relationshipName>ChallengeMissions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCH__Counter__c</fullName>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__MaxValue__c</fullName>
        <label>MaxValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__Mission2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission</label>
        <referenceTo>FieloCH__Mission__c</referenceTo>
        <relationshipLabel>Challenge  Missions (Mission)</relationshipLabel>
        <relationshipName>ChallengeMission2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCH__Mission_Link__c</fullName>
        <formula>HYPERLINK( &quot;/&quot; +  Id   , FieloCH__Mission2__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mission Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__Status__c</fullName>
        <description>Indicates if a collaborative challenge has been accomplished</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accomplished</fullName>
                </value>
                <value>
                    <fullName>Not Accomplished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__Summary__c</fullName>
        <label>Summary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>FieloCH__Team__c</referenceTo>
        <relationshipLabel>Challenge  Missions</relationshipLabel>
        <relationshipName>Missions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Challenge Mission</label>
    <nameField>
        <displayFormat>CHMS-{00000}</displayFormat>
        <label>ChallengeMission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Challenge  Missions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>